LPS-71147 Fix tab alignment

--- a/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/_general.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/_general.scss
@@ -51,6 +51,11 @@
 			}
 		}
 	}
+
+	.navbar-nav {
+		float: none;
+		margin-right: 0px;
+	}
 }
 
 .ddl-publish-modal {
